Masquerade - Info Popup

--- a/Translation/event.json
+++ b/Translation/event.json
@@ -284,6 +284,253 @@
         "th":"01:30-01:50 05:30-05:50<br>09:30-09:50 13:30-13:50<br>17:30-17:50 21:30-21:50 (Serveur)",
         "id":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)"
     },
+    "event.MASQUERADE.info.intro":{
+        "en":"During this event, you will be able to collect bombs and chests. Bombs are used against other players, but also gives EXP and Gold when picked up. Chests give Celebeams level 50 to 70 depending on the chest. All chests give Tokens and Gold. All EXP, Token and gold rewards depend on your level.<br>At the center of the map is a golden chest. It is locked for some part of the event and contains no Celebeams, but contains 10 times more tokens.",
+        "fr":"Au cours de cet événement, vous pourrez collecter des bombes et des coffres. Les bombes sont utilisées contre les autres joueurs, mais elles donnent aussi de l'EXP et de l'or lorsqu'elles sont ramassées. Les coffres donnent des Celebeams de niveau 50 à 70 selon le coffre. Tous les coffres donnent des jetons et de l'or. Toutes les récompenses d'EXP, de jetons et d'or dépendent de votre niveau.<br>Au centre de la carte se trouve un coffre en or. Il est verrouillé pour une partie de l'événement et ne contient pas de Félibres, mais il contient 10 fois plus de jetons.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.p0":{
+        "en":"The event is cut in 3 phases:",
+        "fr":"L'événement est découpé en 3 phases :",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.p1.title":{
+        "en":"1st Phase:",
+        "fr":"1er Phase :",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.p1.content":{
+        "en":"This phase lasts 10 minutes. No PvP is allowed during this phase, meaning that the bombs you are collecting are stacked, but not active yet.",
+        "fr":"Cette phase dure 10 minutes. Le JcJ n'est pas autorisé pendant cette phase, ce qui signifie que les bombes que vous collectez se cummulent, mais pas encore actives.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.p2.title":{
+        "en":"2nd Phase:",
+        "fr":"2em Phase :",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.p2.content":{
+        "en":"This phase lasts 5 minutes. PvP is now active, so you can use your bombs to attack other players. Every 30 seconds, Obams revives you if you get killed.",
+        "fr":"Cette phase dure 5 minutes. Le PvP est maintenant actif, vous pouvez donc utiliser vos bombes pour attaquer les autres joueurs. Toutes les 30 secondes, Obams vous réanime si vous êtes tué.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.p3.title":{
+        "en":"3rd Phase:",
+        "fr":"3em Phase :",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.p3.content":{
+        "en":"This phase lasts 5 minutes. From this time until the end of the event, if you die, Obams kicks you out of the event. The golden chest is now unlocked, only one player can pick it up.",
+        "fr":"Cette phase dure 5 minutes. À partir de ce moment et jusqu'à la fin de l'événement, si vous mourez, Obams vous expulse de l'événement. Le coffre d'or est maintenant déverrouillé, un seul joueur peut le ramasser.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.bombs.title":{
+        "en":"Bombs effects:",
+        "fr":"Effets des bombes :",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.bombs.freeze":{
+        "en":"<b>Gel Bomb: </b>You freeze your opponent for {0} seconds. He cannot perform any action. The freeze cannot be broken",
+        "fr":"<b>Bombe Gel : </b>Vous gelez votre adversaire pendant {0} secondes. Il ne peut effectuer aucune action. Le gel ne peut pas être cassé",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.bombs.tnt":{
+        "en":"<b>TNT Bomb: </b>Deal direct damages equal to {0} percent of the player's max health",
+        "fr":"<b>Bombe TNT : </b>Inflige des dégâts directs égaux à {0} pourcent des PV max du joueur",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.bombs.gaz":{
+        "en":"<b>Gaz Bomb: </b>Deal damages over time equal to {0} percent of the player's per second for {1} seconds",
+        "fr":"<b>Bombe Gaz : </b>Inflige des dégâts sur la durée égaux à {0} pour cent de la valeur du joueur par seconde pendant {1} secondes",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.MASQUERADE.info.bombs.outro":{
+        "en":"All bombs hit players in the area around the position you throw it to, and hit all players but yourself",
+        "fr":"Toutes les bombes touchent les joueurs dans la zone autour de la position vers laquelle vous les lancez, et touchent tous les joueurs sauf vous-même",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "event.BATTLEFIELD.title":{
         "en":"Battlefield",
         "fr":"Champ de bataille",
