Battlefield - Info Popup

--- a/Translation/event.json
+++ b/Translation/event.json
@@ -683,6 +683,101 @@
         "th":"",
         "id":""
     },
+    "event.BATTLEFIELD.info.p1":{
+        "en":"In this event, you are teamed up with a maximum of {0} players. Teams are balanced by cumulating gears, valor and blessings (both on character and servant). Win streak also increase this score.",
+        "fr":"Dans cet événement, vous faites équipe avec un maximum de {0} joueurs. Les équipes sont équilibrées en cumulant l'equipement, les valeurs et les bénédictions (à la fois sur le personnage et le serviteur). Les victoires successives augmentent également ce score.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.info.p2":{
+        "en":"The goal of this event is to take flags to your team's color. There are 5 flags on the map. Each flag captured get your team 10 points every {0} seconds.",
+        "fr":"Le but de cet événement est d'amener les drapeaux à la couleur de votre équipe. Il y a 5 drapeaux sur la carte. Chaque drapeau capturé rapporte 10 points à votre équipe toutes les {0} secondes.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.info.p3":{
+        "en":"Warning, as soon as you enter the main map, PvP is active. You will have to survive to capture flags, or prevent the other team from getting them. Taking direct attacks prevents players from taking flags.",
+        "fr":"Attention, dès que vous entrez sur la carte principale, le PvP est actif. Vous devrez survivre pour capturer des drapeaux, ou empêcher l'autre équipe de les obtenir. Les attaques directes empêchent les joueurs de prendre des drapeaux.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.info.p4":{
+        "en":"The first team to reach 2000 points will win the event. Loosing team will get half the winning side's token reward.",
+        "fr":"La première équipe à atteindre 2000 points remportera l'événement. L'équipe perdante recevra la moitié de la récompense en jetons de l'équipe gagnante.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.BATTLEFIELD.info.p5":{
+        "en":"Warning: the last lobby will be built with the last available players and can have unbalanced players counts",
+        "fr":"Attention : le dernier lobby sera construit avec les derniers joueurs disponibles et peut avoir un nombre de joueurs déséquilibré",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     
     "event.TEMP_FFA.title":{
         "en":"(Temporary) Free For All",
