LavaCore - Info Popup

--- a/Translation/event.json
+++ b/Translation/event.json
@@ -170,6 +170,63 @@
         "th":"17:00-18:00 01:00-02:00 (GMT+7)",
         "id":"03:00-04:00 11:00-12:00 (GMT-7)"
     },
+    "event.LAVA_CORE.info.p1":{
+        "en":"You can enter anytime in this event, but this is a PvP zone. You can gather up to 10 Lava Core in your bag at a time, and you can use up to 5 Lava Core per day. Lava Cores give element EXP, but are protected by 2 guardians.",
+        "fr":"Vous pouvez participer à cet événement à tout moment, mais il s'agit d'une zone JcJ. Vous pouvez rassembler jusqu'à 10 Noyaux de lave dans votre sac à la fois, et vous pouvez utiliser jusqu'à 5 Noyaux de lave par jour. Les Noyaux de lave donnent de l'EXP d'élément, mais sont protégés par 2 gardiens.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.LAVA_CORE.info.p2":{
+        "en":"Lava cores spawn every {0} seconds, and only respawn if the guardians are killed. There are also times in the day when the respawn is much faster and they spawn every {1} seconds",
+        "fr":"Les noyaux de lave apparaissent toutes les {0} secondes et ne réapparaissent que si les gardiens sont tués. À certains moments de la journée, la réapparition est beaucoup plus rapide et ils apparaissent toutes les {1} secondes.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "event.LAVA_CORE.info.p3":{
+        "en":"Be careful not to get killed in the process. 👀",
+        "fr":"Faites attention à ne pas vous faire tuer au passage. 👀",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "event.WEREWOLF_HUNT.title":{
         "en":"Werewolf Hunt",
         "fr":"Chasse des Loup-garou",
