--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -6003,6 +6003,25 @@
         "th":"",
         "id":""
     },
+    "UI.windows.daily_recommended.type.daily_exp.popup_text":{
+        "en":"Buying EXP will grant you 10% EXP of your current level. You can do it only once a day and it will cost {0} Gold.",
+        "fr":"Acheter de l'EXP vous donnera 10% d'EXP de votre niveau actuel. Vous ne pouvez le faire qu'une fois par jour et cela vous coûtera {0} d'or.",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.daily_recommended.type.daily_quest_normal":{
         "en":"Complete 10 Daily Quests",
         "fr":"Terminez 10 Quêtes Journalière",
