--- a/Translation/general.json
+++ b/Translation/general.json
@@ -1272,6 +1272,25 @@
         "th":"",
         "id":""
     },
+    "general.label.score":{
+        "en":"Score",
+        "fr":"Score",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "general.label.second":{
         "en":"Second",
         "fr":"Seconde",
