--- a/Translation/item.json
+++ b/Translation/item.json
@@ -13690,6 +13690,44 @@
         "th":"",
         "id":""
     },
+    "item.5058.name":{
+        "en":"Black Pegasus",
+        "fr":"Pégase Noir",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.5059.name":{
+        "en":"Glowing Black Pegasus",
+        "fr":"Pégase Noir Fluorescent",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.6000.name":{
         "en":"Initial Hairstyle (Green)",
         "fr":"Coiffure Initiale (Vert)",
@@ -15356,6 +15394,25 @@
         "jp":"",
         "pt":"",
         "vi":"Mái Gọn (Tóc đen)",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "item.6088.name":{
+        "en":"Grey Pegasus",
+        "fr":"Pegase Gris",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
@@ -29845,6 +29902,44 @@
 	"item.71084.name": {
 		"en": "Pink Aura - IV",
 		"fr": "Aura Rose - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71088.name": {
+		"en": "Black Phoenix - IV",
+		"fr": "Phoenix Noir - IV",
+		"es": "",
+		"zh-cn": "",
+		"zh-tw": "",
+		"kr": "",
+		"ru": "",
+		"tr": "",
+		"de": "",
+		"jp": "",
+		"pt": "",
+		"vi": "",
+		"ar": "",
+		"it": "",
+		"pl": "",
+		"th": "",
+		"id": ""
+	},
+	"item.71092.name": {
+		"en": "Glowing Black Phoenix - IV",
+		"fr": "Phoenix Noir Fluorescent - IV",
 		"es": "",
 		"zh-cn": "",
 		"zh-tw": "",
