Cryoshard Holyland name

--- a/Translation/map.json
+++ b/Translation/map.json
@@ -2146,6 +2146,25 @@
         "th":"",
         "id":""
     },
+    "map.C5_Cryoshard_Holyland.name":{
+        "en":"Cryoshard Holyland",
+        "fr":"Terre Sainte Cryo-éclat",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "map.C5_Freezing_Path.name":{
         "en":"Freezing Path",
         "fr":"Chemin Gelée",
