--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -5376,6 +5376,25 @@
         "th":"",
         "id":""
     },
+    "UI.windows.spirit.btn.consume":{
+        "en":"Consume",
+        "fr":"Consumer",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "UI.windows.spirit.btn.reroll":{
         "en":"Reroll",
         "fr":"Regénérer",
@@ -5674,6 +5693,25 @@
         "jp":"",
         "pt":"",
         "vi":"Tẩy tủy tư chất tinh linh của bạn sẽ tốn một <i class='inline-item item-icon-41030'></i> Đá Tẩy Tủy Tinh Linh sẽ thêm vào 5 điểm vào tư chất ngẫu nhiên. Tiếp tục chứ?",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    "UI.windows.spirit.consume.confirm":{
+        "en":"Consuming your spirit's talent points will refine a random aptitude point. It will consume {0} Talent points. Continue?",
+        "fr":"Consumer les points de talents de votre esprit va raffiner d'une point son aptitude. Cela consommera {0} Points de talents. Continuer?",
+        "es":"",
+        "zh-cn":"",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"",
         "ar":"",
         "it":"",
         "pl":"",
